Initial work for Minecraft 1.20.1 support. This doesn't compile yet. [skip ci]